buildscript {
    ext {
        coreArtifact = 'core'
        velocityArtifact = 'velocity'
        bukkitArtifact = 'bukkit'
    }
}

plugins {
    id 'idea'
    id 'maven-publish'
    id 'org.jetbrains.kotlin.jvm' version '1.6.0-RC2'
}

allprojects {
    group = 'dev.rollczi.litecommands'
    version = '1.2.1'

    apply plugin: 'java-library'
    apply plugin: 'maven-publish'

    java {
        withSourcesJar()
    }
}

subprojects {
    repositories {
        mavenLocal()
        mavenCentral()

        maven { url "https://repo.panda-lang.org/releases/" }
    }

    apply plugin: 'org.jetbrains.kotlin.jvm'

    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8

    publishing {
        repositories {
            mavenLocal()
            maven {
                name = "panda-repository"
                url = uri("https://repo.panda-lang.org/releases")

                credentials {
                    username = "$panda_user_litecommands"
                    password = "$panda_pass_litecommands"
                }
            }
        }
    }
}

idea {
    project {
        jdkName = "16"
    }
}